# leetcode-progress-tracker

./: .gitignore  CMakeLists.txt  README.md  index.html  index.ts  leetcode-watcher.js  package-lock.json  package.json  pnpm-lock.yaml  records.json  script.sh  watchlist.json  webpack.config.cjs
.github/workflows/: update.yml
.old/: comparison.js  data_generation.js  leetcode-diff.md  package-lock.json  package.json
client/: .gitignore  bootstrap.js  global.css  index.html  index.js  index.ts  js_get_chances.js  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js  webpack.config.js.old
client/functions/: all_matches.js  league_matches.js  live_match.js
data/: records.json  watchlist.json
scripts/: leetcode-fetcher.js  script.sh
src/: main.cpp
